--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "lucide-react": "^0.417.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-awesome-reveal": "^4.2.14",
+    "react-dom": "^18.3.1",
+    "react-simple-typewriter": "^5.0.1",
+    "react-typical": "^0.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-typical": "^0.1.2",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react": "^4.3.1",
