--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-awesome-reveal": "^4.2.14",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "react-simple-typewriter": "^5.0.1",
     "react-typical": "^0.1.3"
   },
