--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "emailjs-com": "^3.2.0",
     "lucide-react": "^0.417.0",
     "react": "^18.3.1",
     "react-awesome-reveal": "^4.2.14",
